--- a/phone/get-involved.html
+++ b/phone/get-involved.html
@@ -13,116 +13,33 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "get-involved.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "get-involved.css"], "outOfDate":[]};
 </script>
   
   <link rel="canonical" href="http://iamlifechurch.org/get-involved.html"/>
   <title>Get Involved</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=3813440122"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3873472948"/>
-  <link rel="stylesheet" type="text/css" href="css/get-involved.css?crc=193745841" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_get-involved.css?crc=71211421"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4226839539"/>
+  <link rel="stylesheet" type="text/css" href="css/get-involved.css?crc=364790886" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/dosis:n3:default.js" type="text/javascript"></script>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu11103"><!-- group -->
-    <div class="browser_width grpelem" id="u11103-bw">
-     <div class="clearfix" id="u11103"><!-- group -->
-      <div class="clip_frame grpelem" id="u11104"><!-- image -->
-       <img class="block" id="u11104_img" src="../images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.25287356321839083" data-image-width="174" data-image-height="44"/>
-      </div>
-     </div>
-    </div>
-    <div class="PamphletWidget clearfix allow_click_through grpelem" id="pamphletu11135" data-visibility="changed" style="visibility:hidden"><!-- none box -->
-     <div class="popup_anchor allow_click_through grpelem" data-col-pos="0" id="u11136popup">
-      <div class="ContainerGroup clearfix" data-col-pos="0" id="u11136" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- stack box -->
-       <div class="Container invi clearfix grpelem" data-col-pos="0" id="u11137" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- column -->
-        <div class="clearfix colelem" id="u11162-4"><!-- content -->
-         <p>MENU</p>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11167" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <div class="clearfix grpelem" id="u11168-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
-          <p id="u11168-2"><span class="Menu-Buttons" id="u11168">HOME</span></p>
-         </div>
-         <div class="clip_frame grpelem" id="u11169" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11169_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11138" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext clearfix grpelem" id="u11141-4" href="about-us.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11141-2"><span class="Menu-Buttons" id="u11141">ABOUT US</span></p></a>
-         <div class="clip_frame grpelem" id="u11139" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11139_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11154" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext ButtonSelected clearfix grpelem" id="u11155-4" href="get-involved.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11155-2"><span class="Menu-Buttons" id="u11155">GET INVOLVED</span></p></a>
-         <div class="clip_frame grpelem" id="u11156" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11156_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11158" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext clearfix grpelem" id="u11159-4" href="prayer.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11159-2"><span class="Menu-Buttons" id="u11159">PRAYER</span></p></a>
-         <div class="clip_frame grpelem" id="u11160" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11160_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11150" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext clearfix grpelem" id="u11151-4" href="testimony.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11151-2"><span class="Menu-Buttons" id="u11151">TESTIMONY</span></p></a>
-         <div class="clip_frame grpelem" id="u11152" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11152_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11142" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext clearfix grpelem" id="u11143-4" href="study.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11143-2"><span class="Menu-Buttons" id="u11143">STUDY</span></p></a>
-         <div class="clip_frame grpelem" id="u11144" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11144_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11146" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext clearfix grpelem" id="u11147-4" href="events.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11147-2"><span class="Menu-Buttons" id="u11147">EVENTS CENTER</span></p></a>
-         <div class="clip_frame grpelem" id="u11148" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11148_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-        <div class="Button clearfix colelem" id="buttonu11163" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- container box -->
-         <a class="nonblock nontext clearfix grpelem" id="u11164-4" href="contact-us.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p id="u11164-2"><span class="Menu-Buttons" id="u11164">CONTACT US</span></p></a>
-         <div class="clip_frame grpelem" id="u11165" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-          <img class="block" id="u11165_img" src="../images/pointer.png?crc=3760686964" alt="" width="17" height="33"/>
-         </div>
-        </div>
-       </div>
-      </div>
-     </div>
-     <div class="ThumbGroup clearfix grpelem" data-col-pos="1" id="u11171" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight"><!-- none box -->
-      <div class="popup_anchor allow_click_through grpelem" data-col-pos="0" id="u11172popup">
-       <div class="Thumb popup_element clearfix" data-col-pos="0" id="u11172" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-leftAdjustmentDoneBy="u11172popup"><!-- group -->
-        <div class="clip_frame clearfix grpelem" id="u11173" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-         <img class="position_content" id="u11173_img" src="../images/menu_icon_04_white_3line-crop-u11173.png?crc=4113681886" alt="" width="40" height="32"/>
-        </div>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u11179popup">
-      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u11179" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-leftAdjustmentDoneBy="u11179popup"><!-- group -->
-       <div class="clip_frame grpelem" id="u11180" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- image -->
-        <img class="block" id="u11180_img" src="../images/close_light.png?crc=126613487" alt="" width="60" height="62"/>
-       </div>
-      </div>
+   <div class="browser_width grpelem" id="u11103-bw">
+    <div class="clearfix" id="u11103"><!-- group -->
+     <div class="clip_frame grpelem" id="u11104"><!-- image -->
+      <img class="block" id="u11104_img" src="../images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.25287356321839083" data-image-width="174" data-image-height="44"/>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="434" data-content-below-spacer="63" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="71" data-content-below-spacer="63" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u11132-bw">
     <div class="clearfix" id="u11132"><!-- group -->
      <div class="clearfix grpelem" id="u11122-4"><!-- content -->
@@ -145,15 +62,13 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","museutils","whatinput","jquery.watch","webpro","musewpslideshow","jquery.museoverlay","touchswipe"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","museutils","whatinput","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
-Muse.Utils.resizeHeight('.popup_anchor.allow_click_through');/* resize height */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#pamphletu11135', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'horizontal',transitionDuration:500,hideAllContentsFirst:true,triggersOnTop:true,shuffle:false,enableSwipe:true,resumeAutoplay:false,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); });/* #pamphletu11135 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
